# data-tools

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: secrets_example.toml
api/: internal_api.py
dashboards/: README.md
dashboards/all_metrics/: app.py
dashboards/all_metrics/modules/v2/: perp_integrators.py  perp_markets.py  perp_stats.py
dashboards/all_metrics/modules/v3/: all_core.py  all_perps.py  chain_core_stats.py  chain_perp_account.py  chain_perp_integrators.py  chain_perp_keepers.py  chain_perp_markets.py  (+3 more)
dashboards/all_metrics/views/: all_chains.py  arbitrum.py  base.py  ethereum.py  optimism.py
dashboards/dash_all_metrics/: all_metrics_app.py
dashboards/dash_all_metrics/chain_pages/: all_chains.py  arbitrum.py  base.py  ethereum.py  optimism.py
dashboards/dash_all_metrics/pages/: base.py  optimism.py
dashboards/dash_key_metrics/: constants.py  key_metrics_app.py
dashboards/dash_key_metrics/views/: cross_chain.py  lp.py  perps.py  token.py
dashboards/key_metrics/: app.py
dashboards/key_metrics/views/: accounts.py  cross_chain.py  links.py  lp.py  perps.py  token.py  v2.py
dashboards/sample/: app.py  sample_app.py
dashboards/sample/views/: arbitrum.py  base.py  home.py
dashboards/system_monitor/: app.py
dashboards/system_monitor/modules/: settings.py
dashboards/system_monitor/views/: core.py  performance.py  perps.py
dashboards/utils/: charts.py  data.py  date_utils.py  display.py  formatting.py  performance.py  providers.py
scripts/: query_report.py
(+14 files in other folders)
